@@ -1,137 +1,79 @@
 package tn.enicarthage.campushub.controller;
 
+import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import tn.enicarthage.campushub.dto.SalleDto;
+import tn.enicarthage.campushub.model.Salle;
+import tn.enicarthage.campushub.service.SalleService;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/v1/salles")
 @CrossOrigin(origins = "http://localhost:4200")
+@RequiredArgsConstructor
+@Slf4j
 public class SalleController {
 
-        @GetMapping
-        public List<SalleDto> getAllSalles() {
-                List<SalleDto> salles = new ArrayList<>();
+    private final SalleService salleService;
 
-                // ==================== BÂTIMENT ANNEXE (Informatique) ====================
+    @GetMapping
+    public ResponseEntity<List<SalleDto>> getAllSalles() {
+        log.info("GET /api/v1/salles");
 
-                // RDC Annexe
-                salles.add(new SalleDto("annexe-mac", "Salle MAC", 30,
-                                Arrays.asList("Ordinateurs Mac", "Projecteur", "Tableau interactif", "Climatisation"),
-                                "Bâtiment Annexe", 0, true, null));
+        List<Salle> salles = salleService.getAllSalles();
+        List<SalleDto> dtos = salles.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
 
-                salles.add(new SalleDto("annexe-labo", "LABO Informatique", 25,
-                                Arrays.asList("Ordinateurs", "Serveurs", "Switch réseau", "Climatisation"),
-                                "Bâtiment Annexe", 0, true, null));
+        return ResponseEntity.ok(dtos);
+    }
 
-                salles.add(new SalleDto("annexe-polyvalente", "Salle Polyvalente", 150,
-                                Arrays.asList("Projecteur", "Sono", "Scène", "Chaises mobiles", "Climatisation"),
-                                "Bâtiment Annexe", 0, true, null));
+    @GetMapping("/{id}")
+    public ResponseEntity<SalleDto> getSalleById(@PathVariable Long id) {
+        log.info("GET /api/v1/salles/{}", id);
 
-                // 1er Étage Annexe (Salles 20-27)
-                for (int i = 0; i <= 7; i++) {
-                        int numSalle = 20 + i;
-                        salles.add(new SalleDto(
-                                        "annexe-" + numSalle,
-                                        "Salle " + numSalle,
-                                        35,
-                                        Arrays.asList("Projecteur", "Tableau blanc", "WiFi", "Climatisation"),
-                                        "Bâtiment Annexe",
-                                        1,
-                                        true,
-                                        null));
-                }
+        Salle salle = salleService.getSalleById(id)
+                .orElseThrow(() -> new RuntimeException("Salle non trouvée"));
 
-                // 2ème Étage Annexe (Salles 30-37)
-                for (int i = 0; i <= 7; i++) {
-                        int numSalle = 30 + i;
-                        salles.add(new SalleDto(
-                                        "annexe-" + numSalle,
-                                        "Salle " + numSalle,
-                                        35,
-                                        Arrays.asList("Projecteur", "Tableau blanc", "WiFi", "Climatisation"),
-                                        "Bâtiment Annexe",
-                                        2,
-                                        true,
-                                        null));
-                }
+        return ResponseEntity.ok(convertToDto(salle));
+    }
 
-                // ==================== BÂTIMENT PRINCIPAL (Mécatronique & Industriel)
-                // ====================
+    @GetMapping("/disponibles")
+    public ResponseEntity<List<SalleDto>> getSallesDisponibles(
+            @RequestParam(required = false) String dateDebut,
+            @RequestParam(required = false) String dateFin) {
+        log.info("GET /api/v1/salles/disponibles");
 
-                // RDC Principal
-                salles.add(new SalleDto("principal-amphi", "Amphithéâtre Principal", 250,
-                                Arrays.asList("Projecteur", "Micro", "Système audio", "Écran géant", "Climatisation"),
-                                "Bâtiment Principal", 0, true, null));
+        // Pour l'instant, on retourne toutes les salles disponibles
+        // TODO: Filtrer par date en vérifiant les réservations
+        List<Salle> salles = salleService.getSallesDisponibles();
+        List<SalleDto> dtos = salles.stream()
+                .map(this::convertToDto)
+                .collect(Collectors.toList());
 
-                // 1er Étage Principal (Salles 20-27)
-                for (int i = 0; i <= 7; i++) {
-                        int numSalle = 20 + i;
-                        salles.add(new SalleDto(
-                                        "principal-" + numSalle,
-                                        "Salle " + numSalle,
-                                        40,
-                                        Arrays.asList("Projecteur", "Tableau blanc", "WiFi", "Climatisation"),
-                                        "Bâtiment Principal",
-                                        1,
-                                        true,
-                                        null));
-                }
+        return ResponseEntity.ok(dtos);
+    }
 
-                // 2ème Étage Principal (Salles 30-37)
-                for (int i = 0; i <= 7; i++) {
-                        int numSalle = 30 + i;
-                        salles.add(new SalleDto(
-                                        "principal-" + numSalle,
-                                        "Salle " + numSalle,
-                                        40,
-                                        Arrays.asList("Projecteur", "Tableau blanc", "WiFi", "Climatisation"),
-                                        "Bâtiment Principal",
-                                        2,
-                                        true,
-                                        null));
-                }
+    @GetMapping("/batiments")
+    public ResponseEntity<List<String>> getBatiments() {
+        log.info("GET /api/v1/salles/batiments");
+        return ResponseEntity.ok(List.of("Bâtiment Annexe", "Bâtiment Principal"));
+    }
 
-                // 3ème Étage Principal (Salles 40-47)
-                for (int i = 0; i <= 7; i++) {
-                        int numSalle = 40 + i;
-                        salles.add(new SalleDto(
-                                        "principal-" + numSalle,
-                                        "Salle " + numSalle,
-                                        40,
-                                        Arrays.asList("Projecteur", "Tableau blanc", "WiFi"),
-                                        "Bâtiment Principal",
-                                        3,
-                                        true,
-                                        null));
-                }
-
-                return salles;
-        }
-
-        @GetMapping("/{id}")
-        public SalleDto getSalleById(@PathVariable String id) {
-                return getAllSalles().stream()
-                                .filter(s -> s.getId().equals(id))
-                                .findFirst()
-                                .orElse(null);
-        }
-
-        @GetMapping("/disponibles")
-        public List<SalleDto> getSallesDisponibles(
-                        @RequestParam(required = false) String dateDebut,
-                        @RequestParam(required = false) String dateFin) {
-
-                return getAllSalles().stream()
-                                .filter(SalleDto::getDisponible)
-                                .toList();
-        }
-
-        @GetMapping("/batiments")
-        public List<String> getBatiments() {
-                return Arrays.asList("Bâtiment Annexe", "Bâtiment Principal");
-        }
+    private SalleDto convertToDto(Salle salle) {
+        SalleDto dto = new SalleDto();
+        dto.setId(salle.getId().toString());
+        dto.setNom(salle.getNom());
+        dto.setCapacite(salle.getCapacite());
+        dto.setEquipements(salle.getEquipements());
+        dto.setBatiment(salle.getBatiment());
+        dto.setEtage(salle.getEtage());
+        dto.setDisponible(salle.getDisponible());
+        dto.setImageUrl(salle.getImageUrl());
+        return dto;
+    }
 }
